--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -37,6 +37,7 @@ html[data-theme=dark] {
 #app {
   background-color: var(--color-bg);
   color: var(--color-text);
+  height: 100vh;
 }
 
 header,
@@ -52,6 +53,11 @@ main {
 
 header {
   padding-block-start: 2.625rem;
+}
+
+main {
+  background-color: var(--color-bg);
+  padding-bottom: 6.25rem;
 }
 
 section {
@@ -210,21 +216,38 @@ ul {
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
+  position: fixed;
   inset: 0;
   z-index: 1;
 }
 
 .color-modal {
   background-color: #fff;
+  border-radius: 0.4375rem;
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.3);
   display: inline-block;
-  padding: 1rem;
+  padding: 1.375rem;
   z-index: 2;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: fit-content;
+}
+.color-modal .btn-close {
+  border-radius: 50%;
+  cursor: pointer;
+  display: block;
+  font-size: 1.25rem;
+  height: 1.875rem;
+  width: 1.875rem;
+  position: absolute;
+  top: -0.9375rem;
+  right: -0.9375rem;
+}
+.color-modal .btn-copy {
+  background-color: #353535;
+  color: #f3f3f3;
 }
 .color-modal__list {
   list-style: none;
@@ -232,6 +255,28 @@ ul {
 }
 .color-modal__item {
   color: #151515;
+  font-size: 1.25rem;
+}
+.color-modal .mensaje_box {
+  border-radius: 0.25rem;
+  color: #252525;
+  margin-top: 0.75rem;
+  padding: 0.25rem 0.5rem;
+  width: 100%;
+}
+.color-modal .mensaje_box--success {
+  background-color: #9de19d;
+}
+.color-modal .mensaje_box--error {
+  background-color: #e98787;
+}
+.color-modal .mensaje-enter-active,
+.color-modal .mensaje-leave-active {
+  transition: opacity 0.5s ease-in-out;
+}
+.color-modal .mensaje-enter-from,
+.color-modal .mensaje-leave-to {
+  opacity: 0;
 }
 
 .color-list__colors {
@@ -326,6 +371,9 @@ ul {
   background-color: var(--color-bg);
   border-top: 1px solid var(--color-text);
   padding: 1.5rem 2.625rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 .footer__grid {
   display: grid;
