--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -296,13 +296,14 @@ ul {
 }
 
 .color-button {
+  align-items: center;
   background-color: var(--color-text);
   border: none;
   border-radius: 0.75rem;
   box-shadow: 1px 2px 5px var(--box-shadow-02);
   color: var(--color-bg);
   cursor: pointer;
-  display: inline-block;
+  display: inline-flex;
   font-size: 1rem;
   margin-top: 1rem;
   padding: 0.5rem 0.75rem;
@@ -323,6 +324,30 @@ ul {
   cursor: not-allowed;
   opacity: 0.8;
   transform: translateY(0);
+}
+.color-button span {
+  background-color: var(--color-bg);
+  display: inline-block;
+  height: 1.5625rem;
+  width: 1.5625rem;
+}
+.color-button--add span {
+  mask-image: url("../../assets/icons/add_icon.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: contain;
+}
+.color-button--copy span {
+  mask-image: url("../../assets/icons/copy_icon.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: contain;
+}
+.color-button--trash span {
+  mask-image: url("../../assets/icons/trash_icon.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: contain;
 }
 
 .color-theme {
