--- a/src/scss/component/_color-button.scss
+++ b/src/scss/component/_color-button.scss
@@ -1,13 +1,20 @@
 @use "../abstracts/index" as *;
 
+$btn-icons: (
+    'add',
+    'copy',
+    'trash'
+);
+
 .color-button {
+    align-items: center;
     background-color: var(--color-text);
     border: none;
     border-radius: to-rem(12);
     box-shadow: 1px 2px 5px var(--box-shadow-02);
     color: var(--color-bg);
     cursor: pointer;
-    display: inline-block;
+    display: inline-flex;
     font-size: to-rem(16);
     margin-top: to-rem(16);
     padding: to-rem(8) to-rem(12);
@@ -31,5 +38,24 @@
         cursor: not-allowed;
         opacity: .8;
         transform: translateY(0);
+    }
+
+    span {
+        background-color: var(--color-bg);
+        display: inline-block;
+        height: to-rem(25);
+        width: to-rem(25);
+    }
+
+    @each $icon in $btn-icons {
+        &--#{$icon} {
+
+            span {
+                mask-image: url('../../assets/icons/'+$icon+'_icon.svg');
+                mask-position: center;
+                mask-repeat: no-repeat;
+                mask-size: contain;
+            }
+        }
     }
 }
