--- a/src/scss/abstracts/_typography.scss
+++ b/src/scss/abstracts/_typography.scss
@@ -1,15 +1,24 @@
 @use "./functions" as *;
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap');
 
+$font-family: "Radio Canada Big", sans-serif;
 
 * {
-    font-family: "Radio Canada Big", sans-serif;
+    font-family: $font-family;
     font-optical-sizing: auto;
     font-style: normal;
 }
 
-h1 {
-    font-size: to-rem(62);
+h1,
+h2 {
     font-weight: 400;
     text-align: center;
+}
+
+h1 {
+    font-size: to-rem(62);
+}
+
+h2 {
+    font-size: to-rem(48);
 }
