--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,3 +5,17 @@ $primary-colors: (
     "black": rgb(0, 0, 0),
     "white": rgb(255, 255, 255)
 );
+
+$color-success: #9de19d;
+$color-error: #e98787;
+
+$black: #000000;
+$white: #ffffff;
+
+$dark-gray-01: #151515;
+$dark-gray-02: #252525;
+$dark-gray-03: #353535;
+
+$gray-ligth: #f3f3f3;
+
+$gold: gold;
