--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,7 +1,8 @@
 @use "./functions" as *;
+@use "./variables" as *;
 
 @mixin colorBox {
-    background-color: #fff;
+    background-color: $white;
     border: 1px solid var(--color-text);
     border-radius: to-rem(7);
     cursor: pointer;
