--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -65,7 +65,6 @@ header {
 
 main {
   background-color: var(--color-bg);
-  padding-bottom: 6.25rem;
 }
 
 section {
@@ -84,6 +83,11 @@ a:link {
 
 ul {
   list-style: none;
+}
+
+.container {
+  background-color: var(--color-bg);
+  overflow: auto;
 }
 
 .color-builder__colors {
@@ -208,8 +212,8 @@ ul {
   grid-template-columns: repeat(3, 4.375rem);
 }
 .color-mix__color {
-  --color-first: $white;
-  --color-second: $white;
+  --color-first: #fff;
+  --color-second: #fff;
   --number-first: 100%;
   --number-second: 0%;
   --color-mix: color-mix(in srgb, var(--color-first) var(--number-first), var(--color-second) var(--number-second));
@@ -300,7 +304,17 @@ ul {
 .color-list__colors {
   gap: 0.625rem;
   display: grid;
-  grid-template-columns: repeat(10, 1.5625rem);
+  grid-template-columns: repeat(5, max-content);
+}
+.color-list__box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.color-list__box small {
+  flex: 0 0 100%;
+  font-size: 0.625rem;
+  text-align: center;
 }
 .color-list__color {
   background-color: #ffffff;
@@ -433,6 +447,30 @@ ul {
   left: calc(100% - 45px);
 }
 
+.color-show {
+  padding: 1rem;
+}
+.color-show__box {
+  column-gap: 0.3125rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0.75rem;
+}
+.color-show__name {
+  flex-basis: 100%;
+  margin-bottom: 0.3125rem;
+}
+.color-show__color {
+  background-color: #ffffff;
+  border: 1px solid var(--color-text);
+  border-radius: 0.4375rem;
+  cursor: pointer;
+  height: 4.375rem;
+  width: 4.375rem;
+  height: 1.5625rem;
+  width: 1.5625rem;
+}
+
 .color-nav {
   align-items: center;
   border-bottom: 1px solid var(--color-text);
@@ -455,9 +493,8 @@ ul {
 .footer {
   background-color: var(--color-bg);
   border-top: 1px solid var(--color-text);
+  margin-top: 2.5rem;
   padding: 1.5rem 2.625rem;
-  position: fixed;
-  bottom: 0;
   width: 100%;
 }
 .footer__grid {
