--- a/src/scss/component/_color-modal.scss
+++ b/src/scss/component/_color-modal.scss
@@ -18,7 +18,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: fit-content;
+    width: min(92vw, to-rem(800));
 
 
     .btn-close {
